[gd_scene load_steps=2 format=3 uid="uid://d3udxwn4i8wx1"]

[ext_resource type="Script" path="res://settings.gd" id="1_u3jea"]

[node name="Settings" type="Control"]
z_index = 3
layout_mode = 3
anchor_left = 0.2
anchor_top = 0.08
anchor_right = 0.92
anchor_bottom = 0.92
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u3jea")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TabContainer" type="TabContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="UI" type="HBoxContainer" parent="PanelContainer/MarginContainer/TabContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/TabContainer/UI"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = -15
theme_override_constants/margin_bottom = -10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/TabContainer/UI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/TabContainer/UI/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="ColorMode" type="HBoxContainer" parent="PanelContainer/MarginContainer/TabContainer/UI/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorModeLabel" type="Label" parent="PanelContainer/MarginContainer/TabContainer/UI/MarginContainer/HBoxContainer/VBoxContainer/ColorMode"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
text = "Color mode: "
vertical_alignment = 1

[node name="ColorModeOptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/TabContainer/UI/MarginContainer/HBoxContainer/VBoxContainer/ColorMode"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Fixed stage color"
popup/item_0/id = 0
popup/item_1/text = "Fixed instruction color"
popup/item_1/id = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/TabContainer/UI/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="ColorModeOptions" type="VBoxContainer" parent="PanelContainer/MarginContainer/TabContainer/UI/MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="CPU Sim" type="HBoxContainer" parent="PanelContainer/MarginContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="Close" type="Button" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "X"

[connection signal="item_selected" from="PanelContainer/MarginContainer/TabContainer/UI/MarginContainer/HBoxContainer/VBoxContainer/ColorMode/ColorModeOptionButton" to="." method="_on_color_mode_option_button_item_selected"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Close" to="." method="_on_close_pressed"]
